<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Camera</string>
    <string name="snapcam_app_name">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <plurals name="delete_selection">
        <item quantity="one">Delete selected item?</item>
        <item quantity="other">Delete selected items?</item>
    </plurals>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="share_as_photo">Share as photo</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <plurals name="number_of_albums_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <plurals name="number_of_groups_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="edit">Edit</string>
    <string name="crop_action">Crop</string>
    <string name="trim_action">Trim</string>
    <string name="set_as">Set as</string>
    <string name="video_err">Can\'t play video.</string>
    <string name="crop_saved">
        Cropped image saved to <xliff:g id="folder_name">%s</xliff:g>.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash fired</string>
    <string name="flash_off">No flash</string>
    <string name="unknown">Unknown</string>
    <string name="try_to_set_local_album_available_offline">
        This item is stored locally and available offline.</string>
    <string name="please_wait">Please wait</string>
    <string name="rendering_photo_sphere">Rendering photo sphere</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">Can\'t connect to the camera.</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="error_permissions">The app does not have critical permissions needed to run. Please check your permissions settings.</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage" product="default">Insert an SD card before using the camera.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="access_sd_fail" product="default">Couldn\'t access SD card.</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="capturing">Capturing</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default" translatable="false">0</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_recordlocation_title">GPS location</string>
    <string name="pref_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_camera_location_label">LOCATION</string>
    <string name="pref_camera_timer_title">Countdown timer</string>
    <string name="pref_camera_timer_default" translatable="false">0</string>
    <plurals name="pref_camera_timer_entry">
        <item quantity="one">1 second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="pref_camera_timer_sound_default">@string/setting_on_value</string>
    <string name="pref_camera_timer_sound_title">Beep during countdown</string>
    <string name="pref_camera_savepath_title">Storage</string>
    <string name="pref_camera_savepath_default">0</string>
    <string name="pref_camera_savepath_entry_0">Phone</string>
    <string name="pref_camera_savepath_entry_1">SD Card</string>
    <string name="setting_off">Off</string>
    <string name="setting_on">On</string>
    <string name="setting_off_value" translatable="false">off</string>
    <string name="setting_on_value" translatable="false">on</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default" translatable="false">1920x1080</string>
    <string name="pref_video_quality_entry_4kdci" translatable="false">
    4k DCI</string>
    <string name="pref_video_quality_entry_2160p" translatable="false">
    4k UHD</string>
    <string name="pref_video_quality_entry_4kuhd" translatable="false">
    4k UHD</string>
    <string name="pref_video_quality_entry_1080p" translatable="false">HD 1080p</string>
    <string name="pref_video_quality_entry_720p" translatable="false">HD 720p</string>
    <string name="pref_video_quality_entry_480p" translatable="false">SD 480p</string>
    <string name="pref_video_quality_entry_qHD" translatable="false">QHD</string>
    <string name="pref_video_quality_entry_2k" translatable="false">2K</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse</string>
    <string name="pref_video_time_lapse_frame_interval_default" translatable="false">0</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_24mp">24M pixels</string>
    <string name="pref_camera_picturesize_entry_21mp">21M pixels</string>
    <string name="pref_camera_picturesize_entry_16mp">16M pixels</string>
    <string name="pref_camera_picturesize_entry_16mp_wide">16M pixels (16:9)</string>
    <string name="pref_camera_picturesize_entry_13mp">13M pixels</string>
    <string name="pref_camera_picturesize_entry_12mp">12M pixels</string>
    <string name="pref_camera_picturesize_entry_8mp">8M pixels</string>
    <string name="pref_camera_picturesize_entry_square">Square (1:1)</string>
    <string name="pref_camera_picturesize_entry_5mp">5M pixels</string>
    <string name="pref_camera_picturesize_entry_4mp_wide">4M pixels (16:9)</string>
    <string name="pref_camera_picturesize_entry_3mp">3M pixels</string>
    <string name="pref_camera_picturesize_entry_2mp">2M pixels</string>
    <string name="pref_camera_picturesize_entry_2mp_wide">2M pixels (16:9)</string>
    <string name="pref_camera_picturesize_entry_1_5mp">1.5M pixels</string>
    <string name="pref_camera_picturesize_entry_1_3mp">1.3M pixels</string>
    <string name="pref_camera_picturesize_entry_1mp">1M pixels</string>
    <string name="pref_camera_picturesize_entry_vga">VGA</string>
    <string name="pref_camera_picturesize_entry_qvga">QVGA</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_focusmode_label_auto">AUTO</string>
    <string name="pref_camera_focusmode_label_infinity">INFINITY</string>
    <string name="pref_camera_focusmode_label_macro">MACRO</string>
    <string name="pref_camera_flashmode_default" translatable="false">auto</string>
    <string name="pref_camera_flashmode_no_flash" translatable="false">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_flashmode_label_auto">FLASH AUTO</string>
    <string name="pref_camera_flashmode_label_on">FLASH ON</string>
    <string name="pref_camera_flashmode_label_off">FLASH OFF</string>
    <string name="pref_camera_video_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_label">WHITE BALANCE</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_whitebalance_label_auto">AUTO</string>
    <string name="pref_camera_whitebalance_label_incandescent">INCANDESCENT</string>
    <string name="pref_camera_whitebalance_label_daylight">DAYLIGHT</string>
    <string name="pref_camera_whitebalance_label_fluorescent">FLUORESCENT</string>
    <string name="pref_camera_whitebalance_label_cloudy">CLOUDY</string>
    <string name="pref_camera_scenemode_default" translatable="false">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_auto">Automatic</string>
    <string name="pref_camera_scenemode_entry_hdr_plus">HDR+</string>
    <string name="pref_camera_scenemode_entry_hdr">HDR</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_plus_on">HDR+ ON</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_plus_off">HDR+ OFF</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_on">HDR ON</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_off">HDR OFF</string>
    <string name="pref_camera_scenemode_entry_action">Action</string>
    <string name="pref_camera_scenemode_entry_night">Night</string>
    <string name="pref_camera_scenemode_entry_sunset">Sunset</string>
    <string name="pref_camera_scenemode_entry_party">Party</string>
    <string name="pref_camera_scenemode_entry_refocus">UbiFocus</string>
    <string name="pref_camera_scenemode_entry_optizoom">OptiZoom</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_review_cancel">Review cancel</string>
    <string name="accessibility_review_ok">Review done</string>
    <string name="accessibility_review_retake">Review retake</string>
    <string name="switch_photo_filmstrip">Filmstrip view</string>
</resources>