<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project
     Copyright (C) 2017 Paranoid Android

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<com.android.camera.ui.CameraControls xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/camera_controls"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:layout_width="64dip"
        android:layout_height="64dip"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="8dip"
        android:layout_marginRight="-8dip"
        layout="@layout/menu_indicators" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <include layout="@layout/camera_controls_bar" />

        <LinearLayout
            android:id="@+id/camera_controls_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/camera_controls_bar_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/ic_arrow"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.android.camera.ui.RotateImageView
                        android:id="@+id/preview_thumb"
                        android:layout_width="@dimen/capture_size"
                        android:layout_height="@dimen/capture_size"
                        android:contentDescription="@string/switch_photo_filmstrip"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center" />

                    <com.android.camera.ui.RotateImageView
                        android:id="@+id/btn_cancel"
                        style="@style/ReviewControlIcon"
                        android:contentDescription="@string/accessibility_review_cancel"
                        android:visibility="gone"
                        android:scaleType="center"
                        android:background="@drawable/circular_bg"
                        android:src="@drawable/ic_menu_cancel_holo_light"
                        android:layout_gravity="center" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="@dimen/shutter_size"
                    android:layout_height="match_parent">

                    <com.android.camera.ui.ShutterButton
                        android:id="@+id/shutter_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:contentDescription="@string/accessibility_shutter_button"
                        android:focusable="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/btn_new_shutter" />

                    <ImageView
                        android:id="@+id/video_button"
                        android:visibility="invisible"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:contentDescription="@string/accessibility_shutter_button"
                        android:focusable="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/btn_new_shutter_video" />

                    <com.android.camera.ui.RotateImageView
                        android:id="@+id/exit_panorama"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/exit_panorama"
                        android:scaleType="fitCenter" />

                    <com.android.camera.ui.RotateImageView
                        android:id="@+id/btn_retake"
                        style="@style/ReviewControlIcon"
                        android:contentDescription="@string/accessibility_review_retake"
                        android:scaleType="center"
                        android:focusable="true"
                        android:visibility="gone"
                        android:background="@drawable/circular_bg"
                        android:src="@drawable/ic_btn_shutter_retake"
                        android:layout_gravity="center" />

                    <com.android.camera.ui.RemainingPhotos
                        android:id="@+id/remaining_photos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.android.camera.ui.RotateImageView
                        android:id="@+id/btn_done"
                        style="@style/ReviewControlIcon"
                        android:contentDescription="@string/accessibility_review_ok"
                        android:visibility="gone"
                        android:scaleType="center"
                        android:background="@drawable/circular_bg"
                        android:src="@drawable/ic_menu_done_holo_light"
                        android:layout_gravity="center" />

                    <com.android.camera.ui.FrontBackSwitch
                        android:id="@+id/front_back_switcher"
                        android:layout_width="@dimen/capture_size"
                        android:layout_height="@dimen/capture_size"
                        android:foreground="@drawable/circular_bg"
                        android:layout_gravity="center" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.android.camera.ui.CameraControls>
